# beat-ecoprove-backend

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Justfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  flake.nix
config/: services.json
docker/postgres/init/: 002-create-databases.sql
nix/: services.nix
src/: error.rs  lib.rs  main.rs  proxy.rs  routing.rs
