[package]
name = "beat-ecoprove-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
pingora = { version = "0.6.0" }
pingora-core = { version = "0.6.0" }
pingora-proxy = { version = "0.6.0" }
tokio = { version = "1.44.2", features = ["full"] }
async-trait = "0.1.89"
env_logger = "0.11.8"
log = "0.4.27"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0"
uuid = { version = "1.16.0", features = ["v4"] }

[[bin]]
name = "beat-proxy"
path = "src/main.rs"
